// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage should mostrar el componente correctamente con el título personalizado 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="hola.jpg"
/>
`;
